--- a/hrapp/templates/shared/base.html
+++ b/hrapp/templates/shared/base.html
@@ -1,25 +1,39 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Bangazon Workforce Management</title>
 
-    <link rel="stylesheet" href="{% static 'styles/base.css' %}" type="text/css" media="screen" />
+    <link
+      rel="stylesheet"
+      href="{% static 'styles/base.css' %}"
+      type="text/css"
+      media="screen"
+    />
 
-    {% block css %}
-    {% endblock %}
-</head>
+    {% block css %} {% endblock %}
+  </head>
 
-<body>
+  <body>
+    <nav id="site-nav">
+      <ol class="navList">
+        <li class="navList__route">
+          <a href="{% url 'hrapp:home' %}">Home</a>
+        </li>
+        <li class="navList__route">
+          <a href="{% url 'hrapp:employee_list' %}">Employees</a>
+        </li>
+        <li class="navList__route">
+          <a href="{% url 'hrapp:logout' %}">Logout</a>
+        </li>
+      </ol>
+    </nav>
 
-    {% block content %}
-    {% endblock %}
+    <main class="main-content">
+      {% block content %} {% endblock %}
+    </main>
 
-    {% block scripts %}
-    {% endblock scripts %}
-
-</body>
-
+    {% block scripts %} {% endblock scripts %}
+  </body>
 </html>
