details view now shows name and department

--- a/hrapp/templates/employees/detail.html
+++ b/hrapp/templates/employees/detail.html
@@ -3,6 +3,6 @@
 {% block content %}
   <body>
     <h1>{{ employee.first_name }} {{ employee.last_name }}</h1>
-    <h2>Department: {{employee.department.name}}</h2>
+    <h2>Department: {{employee.department_name}}</h2>
   </body>
 {% endblock %}
