commit before new migrations

--- a/hrapp/templates/employees/detail.html
+++ b/hrapp/templates/employees/detail.html
@@ -2,7 +2,8 @@
 
 {% block content %}
   <body>
-    <h1>{{ employee.first_name }} {{ employee.last_name }}</h1>
-    <h2>Department: {{employee.department_name}}</h2>
+    <h2>{{ employee.first_name }} {{ employee.last_name }}</h2>
+    <h4>Department: {{employee.department_name}}</h4>
+    <h4>Computer: {{employee.computer_make}}
   </body>
 {% endblock %}
