--- a/hrapp/templates/shared/base.html
+++ b/hrapp/templates/shared/base.html
@@ -25,6 +25,9 @@
           <a href="{% url 'hrapp:employee_list' %}">Employees</a>
         </li>
         <li class="navList__route">
+          <a href="{% url 'hrapp:program_list' %}">Programs</a>
+        </li>
+        <li class="navList__route">
           <a href="{% url 'hrapp:logout' %}">Logout</a>
         </li>
       </ol>
