trying to get delete working as long as an employee hasn't been assigned the computer

--- a/hrapp/templates/computers/detail.html
+++ b/hrapp/templates/computers/detail.html
@@ -6,6 +6,13 @@
             <div>Purchase Date: {{ computer.purchase_date }}</div>
             <div>Decommission Date: {{ computer.decommission_date }}</div>
         </section>
+        <section id="computer-actions" style="display:flex;">
+            <form action="{% url 'hrapp:computer' computer.id %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="actual-method" value="DELETE">
+                <button>Delete</button>
+            </form>
+
 
 {% endblock %}
 
