--- a/hrapp/templates/shared/base.html
+++ b/hrapp/templates/shared/base.html
@@ -24,6 +24,9 @@
         <li class="navList__route">
           <a href="{% url 'hrapp:employee_list' %}">Employees</a>
         </li>
+         <li class="navList__route">
+          <a href="{% url 'hrapp:departments' %}">Departments</a>
+        </li>
         <li class="navList__route">
           <a href="{% url 'hrapp:logout' %}">Logout</a>
         </li>
