--- a/hrapp/templates/computers/detail.html
+++ b/hrapp/templates/computers/detail.html
@@ -10,7 +10,7 @@
             <form action="{% url 'hrapp:computer' computer.id %}" method="POST">
                 {% csrf_token %}
                 <input type="hidden" name="actual-method" value="DELETE">
-                <button>Delete</button>
+                <button onclick="return confirm('Are you sure?');">Delete</button>
             </form>
 
 
