deleted sans exceptions

--- a/hrapp/templates/computers/detail.html
+++ b/hrapp/templates/computers/detail.html
@@ -9,7 +9,7 @@
         <section id="computer-actions" style="display:flex;">
             <form action="{% url 'hrapp:computer' computer.id %}" method="POST">
                 {% csrf_token %}
-                <input type="hidden" name="actual-method" value="DELETE">
+                <input type="hidden" name="actual_method" value="DELETE">
                 <button onclick="return confirm('Are you sure?');">Delete</button>
             </form>
 
