added properties to detail.html for employees and details.py for employees

--- a/hrapp/templates/employees/detail.html
+++ b/hrapp/templates/employees/detail.html
@@ -4,6 +4,6 @@
   <body>
     <h2>{{ employee.first_name }} {{ employee.last_name }}</h2>
     <h4>Department: {{employee.department_name}}</h4>
-    <h4>Computer: {{employee.computer_make}}
+    <h4>Computer: {{ employee.computer_make }} {{ employee.computer_model }}
   </body>
 {% endblock %}
