--- a/hrapp/templates/departments/departments_detail.html
+++ b/hrapp/templates/departments/departments_detail.html
@@ -3,8 +3,11 @@
 {% block content %}
 
    
-    <h2></h2>
-    <p>Budget: $ {{ department.budget }}</p>
+    <h3>Department: {{ department.name }}</h3>
+
+    <p>Budget: ${{ department.budget }} </p>
+    <p>{{deparment.last_name}}</p>
+    
     
 
 {% endblock content %}
