changed header on department template html

--- a/hrapp/templates/departments/departments_list.html
+++ b/hrapp/templates/departments/departments_list.html
@@ -1,7 +1,7 @@
 {% extends 'shared/base.html' %}
 
 {% block content %}
-<h1>Current Department: {{ department.name }}</h1>
+<h1>Departments: {{ department.name }}</h1>
 <ol>
 {% for department in departments %}
     <li>
