--- a/hrapp/templates/employees/detail.html
+++ b/hrapp/templates/employees/detail.html
@@ -4,6 +4,10 @@
   <body>
     <h2>{{ employee.first_name }} {{ employee.last_name }}</h2>
     <h4>Department: {{employee.department_name}}</h4>
-    <h4>Computer: {{ employee.computer_make }} {{ employee.computer_model }}
+    <h4>Computer: {{ employee.computer_make }} {{ employee.computer_model }}</h4>
+    <h4>Training Programs: </h4>
+    {% for employee in employee_programs %}
+      <h3>{{ employee.program_title }}</h3>
+    {% endfor %}
   </body>
 {% endblock %}
