--- a/hrapp/templates/computers/detail.html
+++ b/hrapp/templates/computers/detail.html
@@ -6,9 +6,7 @@
             <div>Purchase Date: {{ computer.purchase_date }}</div>
             <div>Decommission Date: {{ computer.decommission_date }}</div>
         </section>
-{% if request.user.is_superuser == 'False' %}
-{{ NULL }}
-{% elif computer.emp_id == NULL and request.user.is_superuser %} 
+{% if computer.emp_id == NULL and request.user.is_superuser %}
         <section id="computer-actions" style="display:flex;">
             <form action="{% url 'hrapp:computer' computer.id %}" method="POST">
                 {% csrf_token %}
