--- a/hrapp/templates/programs/programs_list.html
+++ b/hrapp/templates/programs/programs_list.html
@@ -1,7 +1,8 @@
 {% extends 'shared/base.html' %} {% block content %}
 <h1>Training Programs</h1>
-
+{% if request.user.is_superuser %}
 <a href="{% url 'hrapp:program_form' %}">Create New Program</a>
+{% endif %}
 <a href="{% url 'hrapp:past_program_list' %}">Past Programs</a>
 
 <ol class="programs">
