--- a/hrapp/templates/shared/base.html
+++ b/hrapp/templates/shared/base.html
@@ -33,9 +33,15 @@
         <li class="navList__route">
           <a href="{% url 'hrapp:computer_list' %}">Computers</a>
         </li>
+{% if request.user.is_authenticated %}
         <li class="navList__route">
           <a href="{% url 'hrapp:logout' %}">Logout</a>
         </li>
+{% else %}
+        <li class="navList__route">
+          <a href="{% url 'hrapp:login' %}">Login</a>
+        </li>
+{% endif %}
       </ol>
     </nav>
 
