--- a/hrapp/templates/programs/past_programs.html
+++ b/hrapp/templates/programs/past_programs.html
@@ -1,21 +1,14 @@
 {% extends 'shared/base.html' %} {% block content %}
-<h1>Past Training Programs</h1>
-
+<h2>Past Programs</h2>
 <ol class="past_programs">
   {% for program in programs %}
   <li class="past_program">
-    <h2>{{ program.title }}</h2>
-    <div>
-      {% if program.employees %} Employees Attended:
-      <ol>
-        {% for employee in program.employees %}
-        <li>{{ employee.first_name }} {{ employee.last_name }}</li>
-        {% endfor %}
-      </ol>
-      {% else %}
-      <h4>no attendees</h4>
-      {% endif %}
-    </div>
+    <a
+      class="program__title"
+      href="{% url 'hrapp:program_details' program.id %}"
+    >
+      {{ program.title }}
+    </a>
   </li>
   {% endfor %}
 </ol>
