--- a/hrapp/templates/programs/detail.html
+++ b/hrapp/templates/programs/detail.html
@@ -19,6 +19,7 @@
   </div>
 </section>
 
+{% if request.user.is_superuser %}
 <section>
   {% if program.end_date >= "2019/01/01"%}
   <form action="{% url 'hrapp:program_details' program.id %}" method="POST">
@@ -33,5 +34,4 @@
   </form>
   {% endif %}
 </section>
-
-{% endblock %}
+{% endif %} {% endblock %}
