--- a/hrapp/static/styles/base.css
+++ b/hrapp/static/styles/base.css
@@ -1,8 +1,17 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-size: 1.25em;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-size: 1.5em;
+  background-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Famericancollege.lk%2Fwp-content%2Fuploads%2F2016%2F01%2Fim-human-resources-management-1000x500.jpg&f=1&nofb=1");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.overlay {
+  background: rgb(255, 255, 255);
+  overflow: hidden;
+  height: 100%;
+  z-index: 2;
+  background-size: cover;
 }
 
 .main-content {
