--- a/hrapp/templates/computers/list.html
+++ b/hrapp/templates/computers/list.html
@@ -1,16 +1,23 @@
-{% extends 'shared/base.html' %}
-
-{% block content %}
+{% extends 'shared/base.html' %} {% block content %}
 <h1>Computers</h1>
 {% if request.user.is_superuser %}
-<a href="{% url 'hrapp:computer_form' %}">Add Computer to Inventory</a>
+<a
+  button
+  type="button"
+  class="btn btn-success"
+  href="{% url 'hrapp:computer_form' %}"
+  >Add Computer to Inventory</a
+>
 {% endif %}
-<ol class="computers">
-{% for computer in computers %}
-    <li>
-        <p><a href="{% url 'hrapp:computer' computer.id %}"> {{ computer.make }} {{ computer.model }}</a></p>
-    </li>
-{% endfor %}
+<ol class="computers list_group">
+  {% for computer in computers %}
+  <li class="list-group-item">
+    <p>
+      <a href="{% url 'hrapp:computer' computer.id %}">
+        {{ computer.make }} {{ computer.model }}</a
+      >
+    </p>
+  </li>
+  {% endfor %}
 </ol>
 {% endblock content %}
-            
