--- a/hrapp/templates/employees/detail.html
+++ b/hrapp/templates/employees/detail.html
@@ -1,15 +1,17 @@
-{% extends 'shared/base.html' %}
-
-{% block content %}
-  <body>
+{% extends 'shared/base.html' %} {% block content %}
+<body class="program-details list-group">
+  <div class="list-group-item">
     <h2>{{ employee.first_name }} {{ employee.last_name }}</h2>
     <h4>Department: {{employee.department_name}}</h4>
-    <h4>Computer: {{ employee.computer_make }} {{ employee.computer_model }}</h4>
-    <h4>Training Programs: </h4>
+    <h4>
+      Computer: {{ employee.computer_make }} {{ employee.computer_model }}
+    </h4>
+    <h4>Training Programs:</h4>
     {% for program in employee.programs %}
-      <ul>
-        <li>{{ program }}</li>
-      </ul>
+    <ul>
+      <li>{{ program }}</li>
+    </ul>
     {% endfor %}
-  </body>
+  </div>
+</body>
 {% endblock %}
