--- a/hrapp/templates/employees/employees_list.html
+++ b/hrapp/templates/employees/employees_list.html
@@ -1,14 +1,14 @@
-{% extends 'shared/base.html' %}
-
-{% block content %}
+{% extends 'shared/base.html' %} {% block content %}
 <h1>Employees</h1>
 
-<ol>
-{% for employee in employees %}
-    <li>
-        <a href="{% url 'hrapp:employee' employee.id %}"> {{ employee.first_name }} {{ employee.last_name }}</a>
-        <p>Department:&nbsp;{{ employee.department.name }}</p>
-    </li>
-{% endfor %}
+<ol class="list_group">
+  {% for employee in employees %}
+  <li class="list-group-item">
+    <a href="{% url 'hrapp:employee' employee.id %}">
+      {{ employee.first_name }} {{ employee.last_name }}</a
+    >
+    <p>Department:&nbsp;{{ employee.department.name }}</p>
+  </li>
+  {% endfor %}
 </ol>
 {% endblock content %}
