--- a/hrapp/templates/employees/detail.html
+++ b/hrapp/templates/employees/detail.html
@@ -1,23 +1,20 @@
 {% extends 'shared/base.html' %}
 
 {% block content %}
+
   <body>
     <h2>{{ employee.first_name }} {{ employee.last_name }}</h2>
     <h4>Department: {{employee.department_name}}</h4>
     <h4>Computer: {{ employee.computer_make }} {{ employee.computer_model }}
-
-   
-    <h4>Computer: {{ employee.computer_make }} {{ employee.computer_model }}</h4>
     <h4>Training Programs: </h4>
     {% for program in employee.programs %}
       <ul>
         <li>{{ program }}</li>
       </ul>
     {% endfor %}
-
-     {% comment %} <form action="{% url 'hrapp:employees_form' employee.employee_id %}" method="GET">
-    {% csrf_token %}
+   <form action="{% url 'hrapp:employees_edit_form' employee.id %}" method="GET">
+      {% csrf_token %}
       <button>Edit</button>
-    </form> {% endcomment %}
+    </form> 
   </body>
 {% endblock %}
