--- a/hrapp/templates/employees/employee_list.html
+++ b/hrapp/templates/employees/employee_list.html
@@ -1,7 +1,12 @@
 {% extends 'shared/base.html' %}
 
 {% block content %}
+
 <h1>Employees</h1>
+
+{% if request.user.is_superuser %}
+<a href="{% url 'hrapp:employees_form' %}">Create New Employee</a>
+{% endif %}
 
 <ol>
 {% for employee in employees %}
