--- a/hrapp/templates/employees/employees_form.html
+++ b/hrapp/templates/employees/employees_form.html
@@ -1,43 +1,76 @@
-{% extends 'shared/base.html' %}
-{% block content %}
-<h1>Employee:</h1>
-{% if employee.id is not None %}
-    <form action="{% url 'hrapp:employee' employee.id %}" method='POST'>
-{% else %}
-    <form action="{% url 'hrapp:employee_list' %}" method='POST'>
-{% endif %}
-    {% csrf_token %}
-     <fieldset>
-        <label for="first_name">First Name: </label>
-        <input id="first_name" type="text" name="first_name" value="{{ employee.first_name }}">
-    </fieldset>
-        <fieldset>
-        <label for="last_name">Last Name: </label>
-        <input id="last_name" type="text" name="last_name" value="{{ employee.last_name }}">
-    </fieldset>
-       <fieldset>
-        <label for="start_date">Start Date: </label>
-        <input id="start_date" type="date" name="start_date" value="{{ employee.start_date }}">
-    </fieldset>
-    <fieldset>
-        <label for="department_id">Department Id # : </label>
-        <input id="department_id" type="number" name="department_id" value="{{ employee.department_id }}">
-    </fieldset>
-    <fieldset>
-        <label for="is_supervisor"> Supervisor: </label>
-        {% if employee.is_supervisor == 1 %}
-        <input id="is_supervisor" type="checkbox" name="is_supervisor" checked="checked" value="true">
-        {% else %}
-        <input id="is_supervisor" type="checkbox" name="is_supervisor" value="false">
-        {% endif %}
-    </fieldset>
+{% extends 'shared/base.html' %} {% block content %}
+<section class="program-details list-group">
+  <div class="list-group-item">
+    <h1>Employee:</h1>
     {% if employee.id is not None %}
-        <input type="hidden" name="actual_method" value="PUT">
+    <form action="{% url 'hrapp:employee' employee.id %}" method="POST">
+      {% else %}
+      <form action="{% url 'hrapp:employee_list' %}" method="POST">
+        {% endif %} {% csrf_token %}
+        <fieldset>
+          <label for="first_name">First Name: </label>
+          <input
+            id="first_name"
+            type="text"
+            name="first_name"
+            value="{{ employee.first_name }}"
+          />
+        </fieldset>
+        <fieldset>
+          <label for="last_name">Last Name: </label>
+          <input
+            id="last_name"
+            type="text"
+            name="last_name"
+            value="{{ employee.last_name }}"
+          />
+        </fieldset>
+        <fieldset>
+          <label for="start_date">Start Date: </label>
+          <input
+            id="start_date"
+            type="date"
+            name="start_date"
+            value="{{ employee.start_date }}"
+          />
+        </fieldset>
+        <fieldset>
+          <label for="department_id">Department Id # : </label>
+          <input
+            id="department_id"
+            type="number"
+            name="department_id"
+            value="{{ employee.department_id }}"
+          />
+        </fieldset>
+        <fieldset>
+          <label for="is_supervisor"> Supervisor: </label>
+          {% if employee.is_supervisor == 1 %}
+          <input
+            id="is_supervisor"
+            type="checkbox"
+            name="is_supervisor"
+            checked="checked"
+            value="true"
+          />
+          {% else %}
+          <input
+            id="is_supervisor"
+            type="checkbox"
+            name="is_supervisor"
+            value="false"
+          />
+          {% endif %}
+        </fieldset>
+        {% if employee.id is not None %}
+        <input type="hidden" name="actual_method" value="PUT" />
         <input type="submit" value="Update" />
-    {% else %}
-        <input type="hidden" name="actual_method" value="POST">  
+        {% else %}
+        <input type="hidden" name="actual_method" value="POST" />
         <input type="submit" value="Create" />
-    {% endif %}
-
-</form>
-{% endblock %}
+        {% endif %}
+      </form>
+      {% endblock %}
+    </form>
+  </div>
+</section>
