more final edits

--- a/hrapp/templates/employees/detail.html
+++ b/hrapp/templates/employees/detail.html
@@ -12,6 +12,13 @@
       <li>{{ program }}</li>
     </ul>
     {% endfor %}
+    <form
+      action="{% url 'hrapp:employees_edit_form' employee.id %}"
+      method="GET"
+    >
+      {% csrf_token %}
+      <button>Edit</button>
+    </form>
   </div>
 </body>
 {% endblock %}
